--- a/Five in a Row Game.css
+++ b/Five in a Row Game.css
@@ -1,5 +1,5 @@
 body {
-    background: linear-gradient(to left, #ffd194, #70e1f5);
+    background: linear-gradient(to bottom, #ffd194, #70e1f5);
     /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
     font-family: 'Roboto', 'Oswald', sans-serif;
 }
