--- a/Five in a Row Game.css
+++ b/Five in a Row Game.css
@@ -12,6 +12,7 @@ text-align: center;
     font-size: 3rem;
     color: #9d50bb;
     margin-bottom: 2rem;
+    font-weight: bold;
 }
 
 .Move {
@@ -19,15 +20,29 @@ text-align: center;
     color:#e74c3c;
 }
 
+#WhosMove {
+    font-weight: bold;
+}
+
+.blackChess {
+    color: #000;
+}
+
+.whiteChess {
+    color: white;
+}
+
 main {
     margin-top: 1rem;
-    display: flex;
+    text-align: center;
+    /* display: flex;
     justify-content: center;
-    align-items: center;
+    align-items: center; */
     /* min-height: 100vh; */
 }
 
 canvas {
+    margin-bottom: 0.6rem;
     border: 1px solid #000;
     max-width: 100%;
     max-height: 100%;
