--- a/Five in a Row Game.css
+++ b/Five in a Row Game.css
@@ -2,6 +2,7 @@ body {
     background: linear-gradient(to bottom, #ffd194, #70e1f5);
     /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
     font-family: 'Roboto', 'Oswald', sans-serif;
+    min-height: 100vh;
 }
 
 header {
@@ -38,7 +39,6 @@ main {
     /* display: flex;
     justify-content: center;
     align-items: center; */
-    /* min-height: 100vh; */
 }
 
 canvas {
