--- a/Five in a Row Game.css
+++ b/Five in a Row Game.css
@@ -48,9 +48,17 @@ canvas {
     max-height: 100%;
 }
 
-#restartButton {
+.buttons {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: 0;
+}
+
+button {
     font-size: 1.2rem;
     padding: 0.5rem;
+    margin: 0 0.5rem;
 }
 
 .rotating {
