--- a/Five in a Row Game.css
+++ b/Five in a Row Game.css
@@ -11,6 +11,7 @@ header {
 
 .thetitle {
     font-family: Monoton;
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
     font-size: 3rem;
     color: #9d50bb;
     margin-bottom: 1.5rem;
@@ -18,12 +19,14 @@ header {
 
 .Move {
     font-family: Barriecito;
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
     font-size: 2rem;
     color: #e74c3c;
 }
 
 .blackMove {
     font-family: Barriecito;
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
     color: #000;
     font-size: 2rem;
     font-weight: bold;
@@ -31,6 +34,7 @@ header {
 
 .whiteMove {
     font-family: Barriecito;
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
     color: white;
     font-size: 2rem;
     font-weight: bold;
@@ -60,6 +64,7 @@ canvas {
 
 button {
     font-family: Handjet;
+    font-weight: bold;
     font-size: 1.2rem;
     padding: 0.5rem;
     margin: 0 0.5rem;
@@ -93,6 +98,7 @@ footer {
 
 .Thankyou {
     text-align: center;
+    text-shadow: 2px 2px 4px rgb(243, 210, 210);
 }
 
 .copyright {
